--- a/index.html
+++ b/index.html
@@ -628,7 +628,7 @@ vi: ts=1 sw=1
         <ul class="contacts-list no-bullets">
             <li>
                 <span class="icon-envelope"></span>
-                <a target="_blank" href="mailto:lex@php.net">lex@php.net</a>
+                <a href="mailto:lex@php.net">lex@php.net</a>
             </li>
             <li>
                 <span class="icon-github"></span>
