--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         <ul class="long-list">
             <li>Начинается с конца 2001 года 🚀</li>
             <li>На момент 2005 года в определенной степени переведены основные части 😌</li>
-            <li>C 2008 года в команда переводчиков распалась — документация остаётся в
+            <li>C 2008 года команда переводчиков распалась — документация остаётся в
                 заброшенном
                 состоянии 😮</li>
             <li>С конца 2009 года из-за сильной неактуальности русский перевод исчезает с
